# atlas

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: adapters.yml  ai-operators.yml  engine.yml  studio.yml
adapters/: Dockerfile  go.mod
adapters/cmd/server/: main.go
adapters/internal/adapter/: adapter.go  clickhouse.go  elasticsearch.go  parquet.go  postgres.go  weaviate.go
adapters/internal/schema/: discovery.go
adapters/internal/server/: grpc.go
ai-operators/: Dockerfile  pyproject.toml
ai-operators/src/: main.py
ai-operators/src/agents/: root_cause.py
ai-operators/src/batching/: engine.py
ai-operators/src/mcp/: elasticsearch_mcp.py  postgres_mcp.py  weaviate_mcp.py
ai-operators/src/operators/: classify.py  embed.py  explain.py  sentiment.py  similarity.py  summarize.py
engine/: Cargo.toml  Dockerfile  build.rs
engine/src/: lib.rs  main.rs
engine/src/compiler/: ast.rs  ir.rs  lexer.rs  mod.rs  parser.rs  planner.rs  semantic.rs
engine/src/executor/: engine.rs
engine/src/server/: grpc.rs
engine/tests/: grpc_test.rs
proto/: buf.gen.yaml  buf.yaml
proto/atlas/v1/: common.proto  execution.proto  query.proto  results.proto  schema.proto
seed/: requirements.txt
seed/clickhouse/: init.sql
seed/elasticsearch/: seed.py
seed/postgres/: init.sql
seed/weaviate/: seed.py
studio/: Dockerfile  package.json  pnpm-lock.yaml
studio/src/app/: layout.tsx  page.tsx
studio/src/app/editor/: page.tsx
studio/src/app/explorer/: page.tsx
studio/src/app/history/: page.tsx
