[project]
name = "atlas-ai-operators"
version = "0.1.0"
description = "Atlas AI operator service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=5.26",
    "openai>=1.14",
    "numpy>=1.26",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "httpx>=0.27",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
