[package]
name = "atlas-engine"
version = "0.1.0"
edition = "2021"
description = "AtlasQL compiler and execution engine"

[dependencies]
logos = "0.14"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
